--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,59 +10,46 @@
             type="com.adista.projectadvance1.register.RegisterViewModel" />
     </data>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
+
+    <ImageView
+        android:id="@+id/iv_background"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/classroom_background"/>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:fitsSystemWindows="true"
+        android:overScrollMode="never">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white">
+            android:layout_height="wrap_content"
+            android:paddingTop="240dp"><!-- Tambahkan padding bottom -->
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+            <!-- Wave Background -->
+            <ImageView
+                android:id="@+id/iv_wave"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/wave_background"
                 app:layout_constraintTop_toTopOf="parent" />
-
-
-            <!-- Background Image (Classroom) -->
-        <ImageView
-            android:id="@+id/iv_background"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/classroom_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHeight_percent="0.35" />
-
-        <!-- Wave Background -->
-        <ImageView
-            android:id="@+id/iv_wave"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/wave_background"
-            app:layout_constraintBottom_toBottomOf="@id/iv_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/container_register"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:background="@android:color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_background">
+                android:paddingBottom="32dp"
+                app:layout_constraintTop_toBottomOf="@id/iv_wave">
 
                 <!-- Title -->
                 <TextView
@@ -70,6 +57,7 @@
                     style="@style/tvTitleRegisterLogin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
                     android:text="Register"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +69,7 @@
                     style="@style/tvSubtitleLoginRegister"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:text="Create your account"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -92,6 +81,9 @@
                     style="@style/TextField"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="24dp"
                     android:hint="Name"
                     android:translationZ="10dp"
                     app:startIconDrawable="@drawable/ic_person"
@@ -106,7 +98,6 @@
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
                         android:text="@={viewModel.name}" />
-
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <!-- Phone Input -->
@@ -115,12 +106,14 @@
                     style="@style/TextField"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="24dp"
                     android:hint="Phone Number"
                     app:startIconDrawable="@drawable/ic_phone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/til_name"
-                    tools:ignore="ExtraText">>
+                    app:layout_constraintTop_toBottomOf="@id/til_name">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_phone"
@@ -130,12 +123,16 @@
                         android:inputType="phone"
                         android:text="@={viewModel.phoneNumber}" />
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <!-- School Input -->
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_school"
                     style="@style/TextField"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="24dp"
                     android:hint="School"
                     app:startIconDrawable="@drawable/ic_school"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -157,9 +154,13 @@
                     style="@style/TextField"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="24dp"
                     android:hint="Password"
                     app:startIconDrawable="@drawable/ic_lock"
                     app:endIconMode="password_toggle"
+                    app:endIconTint="@color/navy"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/til_school">
@@ -179,9 +180,13 @@
                     style="@style/TextField"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="24dp"
                     android:hint="Confirm Password"
                     app:startIconDrawable="@drawable/ic_lock"
                     app:endIconMode="password_toggle"
+                    app:endIconTint="@color/navy"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/til_password">
@@ -201,6 +206,9 @@
                     style="@style/loginregisterBtn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="24dp"
                     android:onClick="@{() -> viewModel.onRegisterClick()}"
                     android:text="Register"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -213,13 +221,25 @@
                     style="@style/tvLoginRegisterBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="32dp"
                     android:text="Already have account? login"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/btn_register" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.core.widget.NestedScrollView>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </FrameLayout>
 </layout>
