--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,12 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".login.LoginActivity">
+    tools:context=".ui.login.LoginActivity">
 
     <data>
         <variable
             name="viewModel"
-            type="com.adista.projectadvance1.login.LoginViewModel" />
+            type="com.adista.projectadvance1.ui.login.LoginViewModel" />
     </data>
 
     <androidx.core.widget.NestedScrollView
